Create initial html structure

--- a/index.html
+++ b/index.html
@@ -8,5 +8,30 @@
   <title>Home Finder Website</title>
 </head>
 <body>
+  <main>
+    <header>
+
+    </header>
+
+    <section class="technology">
+
+    </section>
+
+    <section class="sold">
+
+    </section>
+
+    <section class="home-selling">
+
+    </section>
+
+    <section class="customers">
+
+    </section>
+
+    <footer>
+
+    </footer>
+  </main>
 </body>
 </html>
