--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Home Finder Website</title>
 </head>
@@ -16,8 +16,8 @@
         <img src="" alt="Site logo">
         <nav>
           <ul>
-            <li></li>
-            <li></li>
+            <li>Browse Homes</li>
+            <li>Sell Your Home</li>
           </ul>
         </nav>
         <div class="search tablet-navigation">
