Add header styles progress

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <main class="container">
     <header>
-      <div class="navigation">
-        <img src="" alt="Site logo">
-        <nav>
+      <div class="navigation flex">
+        <img id="site-logo" src="images/make-home-logo.png" alt="Site logo">
+        <nav class="tablet-navigation">
           <ul>
             <li>Browse Homes</li>
             <li>Sell Your Home</li>
@@ -26,6 +26,7 @@
         </div>
         <p class="tablet-navigation">En</p>
         <img class="tablet-navigation" src="" alt="Language selector icon">
+        <img class="mobile-navigation hamburger" src="images/hamburger.png" alt="Hamburger menu icon">
       </div>
 
       <div class="hero-wrapper flex">
