Add styles for salary selector section

--- a/index.html
+++ b/index.html
@@ -33,19 +33,16 @@
         <article class="hero-intro">
           <h1>We will find a perfect <span>Home</span> for you</h1>
           <h5>We will match you with the best property</h5>
-          <img src="images/" alt="Tv icon">
-          <p>How it works?</p>
+          <img src="images/screen.png" alt="Tv icon">
+          <p><span>How it works?</span></p>
         </article>
         <article class="salary-selector">
           <h3>What's your annual salary?</h3>
           <h5>We will match best property for you.</h5>
           <select name="salary" id="salary-select">
-            <option value="4060">$40,000 - $60,000</option>
             <option value="6080">$60,000 - $80,000</option>
             <option value="8010">$80,000 - $100,000</option>
-            <option value="1012">$100,000 - $120,000</option>
-            <option value="1214">$120,000 - $140,000</option>
-            <option value="1400">$140,000+</option>
+            <option value="1000">$100,000+</option>
           </select>
           <button>Get Started</button>
         </article>
