Add styles for technology section

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 
     <section class="technology flex">
       <div>
-        <img src="images/" alt="Adobe XD logo">
+        <img src="images/adobe-xd-logo.png" alt="Adobe XD logo">
         <h4>Anywhere</h4>
         <p>We have covered 520+ cities around the world.</p>
       </div>
       <div>
-        <img src="images/" alt="Sketch logo">
+        <img src="images/sketch-logo.png" alt="Sketch logo">
         <h4>99% Accurate</h4>
         <p>We have covered 520+ cities around the world.</p>
       </div>
       <div>
-        <img src="images/" alt="Figma logo">
+        <img id="figma" src="images/figma-logo.png" alt="Figma logo">
         <h4>24/7 Support</h4>
         <p>We have covered 520+ cities around the world.</p>
       </div>
