Add styles for sold cards section

--- a/index.html
+++ b/index.html
@@ -73,35 +73,35 @@
       <h2 class="text-center">Recently Sold Houses</h2>
       <div class="sold-card-wrapper flex">
         <div class="sold-card">
-          <div class="sold-image"><img src="images/" alt="Image of interior/exterior of sold home"></div>
-          <div class="home-info">
+          <div class="sold-image card card-1" alt="Image of interior/exterior of sold home"></div>
+          <div class="home-info flex">
             <h4>Villa v2.0</h4>
             <h4 class="price">$5.42k</h4>
           </div>
           <div class="home-location">
-            <img class="home-location-icon" src="images/" alt="GPS direction icon">
+            <img class="home-location-icon" src="images/cursor.png" alt="GPS direction icon">
             <p>Celina, Delaware</p>
           </div>
         </div>
         <div class="sold-card">
-          <div class="sold-image"><img src="images/" alt="Image of interior/exterior of sold home"></div>
-          <div class="home-info">
+          <div class="sold-image card card-2" alt="Image of interior/exterior of sold home"></div>
+          <div class="home-info flex">
             <h4>Royal Home</h4>
             <h4 class="price">$9.12k</h4>
           </div>
           <div class="home-location">
-            <img class="home-location-icon" src="images/" alt="GPS direction icon">
+            <img class="home-location-icon" src="images/cursor.png" alt="GPS direction icon">
             <p>Mesa, New Jersey</p>
           </div>
         </div>
         <div class="sold-card">
-          <div class="sold-image"><img src="images/" alt="Image of interior/exterior of sold home"></div>
-          <div class="home-info">
-            <h4>Decorated Home</h4>
+          <div class="sold-image card card-3" alt="Image of interior/exterior of sold home"></div>
+          <div class="home-info flex">
+            <h4>Comfy Home</h4>
             <h4 class="price">$7.68k</h4>
           </div>
           <div class="home-location">
-            <img class="home-location-icon" src="images/" alt="GPS direction icon">
+            <img class="home-location-icon" src="images/cursor.png" alt="GPS direction icon">
             <p>Richardson, California</p>
           </div>
         </div>
