Add styles for mobile footer section

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <h2>ofsp_ce</h2>
         <p>Open an account in minutes, get full<br />Control for much longer</p>
       </div>
-      <div class="footer-nav">
+      <div class="footer-nav tablet-footer">
         <h3>Company</h3>
         <ul>
           <li>About</li>
@@ -171,7 +171,7 @@
           <li>Mobile</li>
         </ul>
       </div>
-      <div class="footer-nav">
+      <div class="footer-nav tablet-footer">
         <h3>Contact</h3>
         <ul>
           <li>Help/FAQ</li>
@@ -179,7 +179,7 @@
           <li>Affiliates</li>
         </ul>
       </div>
-      <div class="footer-nav">
+      <div class="footer-nav tablet-footer">
         <h3>More</h3>
         <ul>
           <li>Airline Fees</li>
@@ -189,14 +189,14 @@
       </div>
       <div class="social-links">
         <div class="footer-links">
-          <button class="footer-social"> <img src="images/" alt="Facebook icon"> </button>
-          <button class="footer-social"> <img src="images/" alt="Instagram icon"> </button>
-          <button class="footer-social"> <img src="images/" alt="Twitter icon"> </button>
+          <button class="footer-social"> <img src="images/facebook.png" alt="Facebook icon"> </button>
+          <button class="footer-social"> <img src="images/instagram.png" alt="Instagram icon"> </button>
+          <button class="footer-social"> <img src="images/twitter.png" alt="Twitter icon"> </button>
         </div>
         <h3>Discover our app</h3>
         <div class="mobile-store-links">
-          <button class="footer-wide-social"> <img src="images/" alt="Google play icon"> </button>
-          <button class="footer-wide-social"> <img src="images/" alt="App store icon"> </button>
+          <button class="footer-wide-social"> <img src="images/play-button.png" alt="Google play icon"> </button>
+          <button class="footer-wide-social"> <img src="images/app-store.png" alt="App store icon"> </button>
         </div>
       </div>
     </footer>
