Add passable mobile version/ needs major refinement

--- a/index.html
+++ b/index.html
@@ -113,20 +113,32 @@
       <div class="selling-technique-wrapper flex">
         <div class="selling-technique-info">
           <h2>Three Easy Steps in Home Selling Techniques</h2>
-          <div>
-            <img src="images/" alt="">
-            <h4>Duis Aute Irure</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio deserunt dicta deleniti iure.</p>
+          <div class="flex">
+            <div class="colored-icon-wrapper">
+              <img src="images/fullscreen.png" alt="">
+            </div>
+            <div>
+              <h4>Duis Aute Irure</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio deserunt dicta deleniti iure.</p>
+            </div>
           </div>
-          <div>
-            <img src="images/" alt="">
-            <h4>Excepteur Sint</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio dicta deleniti iure.</p>
+          <div class="flex">
+            <div class="colored-icon-wrapper">
+              <img src="images/swimmer.png" alt="">
+            </div>
+            <div>
+              <h4>Excepteur Sint</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio dicta deleniti iure.</p>
+            </div>
           </div>
-          <div>
-            <img src="images/" alt="">
-            <h4>Culpa Mollite</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio deserunt dicta deleniti iure.</p>
+          <div class="flex">
+            <div class="colored-icon-wrapper">
+              <img src="images/taxi.png" alt="">
+            </div>
+            <div>
+              <h4>Culpa Mollite</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio deserunt dicta deleniti iure.</p>
+            </div>
           </div>
         </div>
         <div class="selling-technique-asset">
@@ -134,27 +146,30 @@
             <div class="selling-card-image"></div>
             <h4>Wallpapger Design Pattern</h4>
             <p>Project Sky | by LaMonte Fields</p>
-            <button> <img src="images/" alt="Leaf icon"> </button>
-            <button> <img src="images/" alt="Map icon"> </button>
-            <button> <img src="images/" alt="Direction icon"> </button>
-            <img src="images/" alt="Building icon">
-            <p>23 Comments</p>
-            <img src="images/" alt="Heart Icon">
+            <div>
+              <button> <img src="images/leaf.png" alt="Leaf icon"> </button>
+              <button> <img src="images/street-map.png" alt="Map icon"> </button>
+              <button> <img src="images/navigation.png" alt="Direction icon"> </button>
+            </div>
+            <div class="selling-card-stats">
+              <img src="images/office-building.png" alt="Building icon">
+              <p>23 Comments</p>
+              <img src="images/like.png" alt="Heart Icon">
+            </div>
           </div>
           <!-- QUICK THOUGHT I may be able to move this card up into the above div. Then I'd be able to set selling-card relative and position the secondary perfectly -->
-          <div class="secondary-selling-card flex">
-            <img src="images/" alt="secondary selling card image">
-          </div>
+          <!-- <div class="secondary-selling-card flex">
+            <img src="images/secondary-selling-card.png" alt="secondary selling card image">
+          </div> -->
         </div>
       </div>
     </section>
 
     <section class="customers text-center flex">
       <div class="customer-wrapper">
-        <div class="customer-logo"> <img src="images/" alt="Dropbox logo"> </div>
-        <div class="customer-logo"> <img src="images/" alt="Airbnb logo"> </div>
-        <div class="customer-logo"> <img src="images/" alt="Asana logo"> </div>
-        <div class="customer-logo"> <img src="images/" alt="Mailchimp logo"> </div>
+        <div class="customer-logo"> <img src="images/dropbox-logo.png" alt="Dropbox logo"> </div>
+        <div class="customer-logo"> <img src="images/airbnb.png" alt="Airbnb logo"> </div>
+        <div class="customer-logo"> <img src="images/mailchimp.png" alt="Mailchimp logo"> </div>
       </div>
     </section>
 
